main/default/objects/Delivery_Collateral__c/Delivery_Collateral__c.object-meta.xml
<CustomObject>
    <label>Delivery Collateral</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>