main/default/objects/Delivery_Collateral__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Creative_Corner</relationshipName>
    <type>Lookup</type>
</CustomField>