main/default/objects/Delivery_Collateral__c/fields/Brand_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Brand_Requirements__c</fullName>
    <inlineHelpText>Type of branding e.g., Cerner vs. EHRM branding</inlineHelpText>
    <label>Brand Requirements</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>