main/default/objects/Delivery_Collateral__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Creative_Corners</relationshipName>
    <type>Lookup</type>
</CustomField>