main/default/objects/Delivery_Collateral__c/fields/Content_Not_to_be_Edited__c.field-meta.xml
<CustomField>
    <fullName>Content_Not_to_be_Edited__c</fullName>
    <inlineHelpText>Content that CANNOT be edited/changed (e.g., contract content placed into a deliverable, names of client documents,processes that may not be altered, etc.)</inlineHelpText>
    <label>Content Not to be Edited</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>