main/default/objects/Delivery_Collateral__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer or Client for which document applies. Note: NCC Internal = Edera L3C</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Creative_Corners</relationshipName>
    <type>Lookup</type>
</CustomField>