main/default/objects/Delivery_Collateral__c/fields/Draft_Due_Date_to_Production__c.field-meta.xml
<CustomField>
    <fullName>Draft_Due_Date_to_Production__c</fullName>
    <inlineHelpText>Due date for which requestor POC submits document to Production Team</inlineHelpText>
    <label>Draft Due Date to Production</label>
    <type>Date</type>
</CustomField>