main/default/objects/Delivery_Collateral__c/fields/Due_Date_Client_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Client_Delivery__c</fullName>
    <label>Due Date (Client Delivery)</label>
    <type>Date</type>
</CustomField>