main/default/objects/Delivery_Collateral__c/fields/Link_to_File_to_be_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Link_to_File_to_be_Formatted__c</fullName>
    <label>Link to File to be Formatted</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>