main/default/objects/Delivery_Collateral__c/fields/Link_to_Original_BOC_SG_File__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Original_BOC_SG_File__c</fullName>
    <label>Link to Original BOC SG File</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>