main/default/objects/Delivery_Collateral__c/fields/Link_to_SGRR_Folder__c.field-meta.xml
<CustomField>
    <fullName>Link_to_SGRR_Folder__c</fullName>
    <label>Link to SGRR Folder</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>