main/default/objects/Delivery_Collateral__c/fields/Link_to_Supporting_File_1__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Supporting_File_1__c</fullName>
    <label>Link to Supporting File 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>