main/default/objects/Delivery_Collateral__c/fields/Link_to_Supporting_File_3__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Supporting_File_3__c</fullName>
    <label>Link to Supporting File 3</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>