main/default/objects/Delivery_Collateral__c/fields/Production_Support_Requested__c.field-meta.xml
<CustomField>
    <fullName>Production_Support_Requested__c</fullName>
    <label>Production Support Requested</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editorial Support Only</fullName>
            </value>
            <value>
                <fullName>Graphics Support Only</fullName>
            </value>
            <value>
                <fullName>Full Creative and QA Support</fullName>
            </value>
            <value>
                <fullName>RCIS SGRR Support: Package</fullName>
                <isActive>false</isActive>
                <label>RCIS SGRR Support: Package</label>
            </value>
            <value>
                <fullName>RCIS SGRR Support: Prepare</fullName>
                <isActive>false</isActive>
                <label>RCIS SGRR Support: Prepare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>