main/default/objects/Delivery_Collateral__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>