main/default/objects/Delivery_Collateral__c/fields/QA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Due_Date__c</fullName>
    <label>QA Due Date</label>
    <type>DateTime</type>
</CustomField>