main/default/objects/Delivery_Collateral__c/fields/SGRR_Package_Client_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SGRR_Package_Client_Due_Date__c</fullName>
    <label>SGRR Package Client Due Date</label>
    <type>Date</type>
</CustomField>