main/default/objects/Delivery_Collateral__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Production_Support_Requested__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Received</fullName>
            </value>
            <value>
                <fullName>File Submission</fullName>
            </value>
            <value>
                <fullName>Tech Editing</fullName>
            </value>
            <value>
                <fullName>Tech Editing: Check</fullName>
            </value>
            <value>
                <fullName>POC Incorporating Feedback</fullName>
            </value>
            <value>
                <fullName>Graphic Support</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>QA: Check</fullName>
            </value>
            <value>
                <fullName>File Delivery</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.1 TE</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.2 TE-IBPA</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.3 TE-QC</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.4 QA</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.5 QA-IBPA</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.6 QA-QC</fullName>
            </value>
            <value>
                <fullName>Prepare: 2.7 GS</fullName>
            </value>
            <value>
                <fullName>Prepare: File Delivery</fullName>
            </value>
            <value>
                <fullName>Package: 5.1 TE</fullName>
            </value>
            <value>
                <fullName>Package: 5.2 TE-IBPA</fullName>
            </value>
            <value>
                <fullName>Package: 5.3 TE-QC</fullName>
            </value>
            <value>
                <fullName>Package: 5.4 QA</fullName>
            </value>
            <value>
                <fullName>Package: 5.5 QA-IBPA</fullName>
            </value>
            <value>
                <fullName>Package: 5.6 QA-QC</fullName>
            </value>
            <value>
                <fullName>Package: 5.7 GS</fullName>
            </value>
            <value>
                <fullName>Package: File Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>