main/default/objects/Delivery_Collateral__c/fields/Task_for_Production__c.field-meta.xml
<CustomField>
    <fullName>Task_for_Production__c</fullName>
    <label>Task for Production</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>