main/default/objects/Delivery_Collateral__c/fields/Type_and_Scope__c.field-meta.xml
<CustomField>
    <fullName>Type_and_Scope__c</fullName>
    <inlineHelpText>Request details e.g., scope, file type, etc.</inlineHelpText>
    <label>Type and Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>