main/default/objects/Delivery_Collateral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date_Client_Delivery__c</columns>
    <columns>Draft_Due_Date_to_Production__c</columns>
    <columns>Type_and_Scope__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>contains</operation>
        <value>abbey</value>
    </filters>
    <label>All Records</label>
</ListView>