main/default/objects/Delivery_Collateral__c/listViews/All_Production_Support_Items.listView-meta.xml
<ListView>
    <fullName>All_Production_Support_Items</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Due_Date_Client_Delivery__c</columns>
    <columns>Draft_Due_Date_to_Production__c</columns>
    <columns>Contact__c</columns>
    <columns>Production_Support_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Production_Support_Requested__c</field>
        <operation>notEqual</operation>
        <value>RCIS SGRR Support: Prepare,RCIS SGRR Support: Package</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Completed</value>
    </filters>
    <label>All Production Support Items</label>
    <sharedTo>
        <group>Production_Team</group>
    </sharedTo>
</ListView>