main/default/objects/Delivery_Collateral__c/listViews/Copy_of_Creative_Corner_List.listView-meta.xml
<ListView>
    <fullName>Copy_of_Creative_Corner_List</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Due_Date_Client_Delivery__c</columns>
    <columns>Draft_Due_Date_to_Production__c</columns>
    <columns>Contact__c</columns>
    <columns>Production_Support_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Production_Support_Requested__c</field>
        <operation>notEqual</operation>
        <value>RCIS SGRR Support: Prepare,RCIS SGRR Support: Package</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <label>Non-SGRR Items</label>
</ListView>