main/default/objects/Delivery_Collateral__c/listViews/Creative_Corner_List.listView-meta.xml
<ListView>
    <fullName>Creative_Corner_List</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Due_Date_Client_Delivery__c</columns>
    <columns>Draft_Due_Date_to_Production__c</columns>
    <columns>Contact__c</columns>
    <columns>Production_Support_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Creative Corner List</label>
</ListView>